--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ node_js:
 services:
   - docker
 before_install:
-  - docker build -t rav/test .
-  - docker run -d -p 127.0.0.1:80:3000 rav/test
-  - docker ps -a
+  - docker login --username=_ --password=1319215a-58dd-4cff-b246-7f84f163c429 registry.heroku.com
+  - docker build -t registry.heroku.com/rav/test/web .
+  - docker push registry.heroku.com/rav/test/web
