--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ services:
   - docker
 before_install:
   - docker login --username=_ --password=1319215a-58dd-4cff-b246-7f84f163c429 registry.heroku.com
-  - docker build -t registry.heroku.com/rav/test/web .
-  - docker push registry.heroku.com/rav/test/web
+  - docker build -t registry.heroku.com/test/web .
+  - docker push registry.heroku.com/test/web
