--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,4 @@ before_install:
   - docker login --username=_ --password=1319215a-58dd-4cff-b246-7f84f163c429 registry.heroku.com
   - docker build -t registry.heroku.com/test-180185/web .
   - docker push registry.heroku.com/test-180185/web
+  - heroku container: release web --app $ test-180185
