--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,15 @@
+sudo: required
 language: node_js
 node_js:
 - '10'
+
+before_script:
+  # this install.sh script requires sudo
+  - wget -qO- https://toolbelt.heroku.com/install.sh | sh
+
+script:
+  - /usr/local/heroku/bin/heroku restart --app serve123 # requires HEROKU_API_KEY env variable
+
 deploy:
   provider: heroku
   api_key:
