--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_script:
 
 script:
   - /usr/local/heroku/bin/heroku restart --app serve123 # requires HEROKU_API_KEY env variable
+  - heroku container:login
 
 deploy:
   provider: heroku
