--- a/.travis.yml
+++ b/.travis.yml
@@ -8,14 +8,13 @@ services:
 
 before_script:
   # this install.sh script requires sudo
-  - wget -qO- https://toolbelt.heroku.com/install.sh | sh
+  # - wget -qO- https://toolbelt.heroku.com/install.sh | sh
 
 script:
-  - /usr/local/heroku/bin/heroku restart --app serve123 # requires HEROKU_API_KEY env variable 1319215a-58dd-4cff-b246-7f84f163c429
+  # - /usr/local/heroku/bin/heroku restart --app serve123 # requires HEROKU_API_KEY env variable
   - docker login --username=_ --password=1319215a-58dd-4cff-b246-7f84f163c429 registry.heroku.com
   - docker build -t registry.heroku.com/serve123/web .
   - docker push registry.heroku.com/serve123/web
-  - heroku container:release web
   #- "/usr/local/heroku/bin/heroku container:login"
   #- "/usr/local/heroku/bin/heroku container:push web"
 
