--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,13 @@ node_js:
 services:
   - docker
 
-before_script:
+#before_script:
   # this install.sh script requires sudo
   # - wget -qO- https://toolbelt.heroku.com/install.sh | sh
 
 script:
-  - /usr/local/heroku/bin/heroku restart --app serve123 # requires HEROKU_API_KEY env variable
-  - docker login --username=_ --password=1319215a-58dd-4cff-b246-7f84f163c429 registry.heroku.com
+  #- /usr/local/heroku/bin/heroku restart --app serve123 # requires HEROKU_API_KEY env variable
+  - docker login --username=_ --password=3933e872-8810-42b0-82e9-1743f8a4d08c registry.heroku.com
   - docker build -t registry.heroku.com/serve123/web .
   - docker push registry.heroku.com/serve123/web
   #- "/usr/local/heroku/bin/heroku container:login"
